--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     408272151035187201       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "TT08 Wokwi Doodle"      # Project title
+  author:       "Darryl Miles"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "TT08 Wokwi Doodle"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -14,24 +14,24 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "input0"
+  ui[1]: "input1"
+  ui[2]: "input2"
+  ui[3]: "input3"
+  ui[4]: "input4"
+  ui[5]: "input5"
+  ui[6]: "input6"
+  ui[7]: "input7"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "7SEG A"
+  uo[1]: "7SEG B"
+  uo[2]: "7SEG C"
+  uo[3]: "7SEG D"
+  uo[4]: "7SEG E"
+  uo[5]: "7SEG F"
+  uo[6]: "7SEG G"
+  uo[7]: "7SEG DP"
 
   # Bidirectional pins
   uio[0]: ""
